set up server and DB

--- a/wdw/backend/.env
+++ b/wdw/backend/.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://srdesign:whatsduewhen@cluster0.eui6a.mongodb.net/test?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://admin:11EAnd5JzmgoY5gF@cluster0.gtv8e.mongodb.net/wdw-db?retryWrites=true&w=majority
