--- a/wdw/package.json
+++ b/wdw/package.json
@@ -11,9 +11,9 @@
     "bootstrap": "^4.5.3",
     "pretty-checkbox": "^3.0.3",
     "pretty-checkbox-react": "^3.1.0",
-    "react": "^17.0.1",
+    "react": "17.0.1",
     "react-bootstrap": "^1.4.3",
-    "react-dom": "^17.0.1",
+    "react-dom": "17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
