--- a/wdw/package.json
+++ b/wdw/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@date-io": "^1.3.13",
+    "@date-io/date-fns": "^2.10.8",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
