--- a/wdw/package.json
+++ b/wdw/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io": "^1.3.13",
-    "@date-io/date-fns": "^2.10.8",
-    "@material-ui/core": "^4.11.2",
+    "@material-ui/core": "5.0.0-alpha.24",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "5.0.0-alpha.24",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
