--- a/wdw/package.json
+++ b/wdw/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "@material-ui/core": "5.0.0-alpha.24",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "5.0.0-alpha.24",
