--- a/wdw/package.json
+++ b/wdw/package.json
@@ -11,20 +11,21 @@
     "@emotion/styled": "^11.1.5",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "5.0.0-alpha.24",
+    "@material-ui/lab": "^5.0.0-alpha.31",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^4.6.0",
     "date-fns": "^2.17.0",
     "pretty-checkbox": "^3.0.3",
     "pretty-checkbox-react": "^3.1.0",
-    "react": "17.0.1",
+    "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
-    "react-dom": "17.0.1",
+    "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "reactstrap": "^8.9.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
